# PCLCompiler

./: .gitignore  .gitignore.swp  .swo  .swp  0PCLCompiler.cabal  CHANGELOG.md  ChangeLog.md  LICENSE  LongDouble.hs  Main.hs  Makefile  PCLCompiler.cabal  PCLCompiler.cabal.save0  PCLCompiler.cabal.save1  README.md  a.out  clean.sh  llvmhs.ll  llvmhs.s  ok.c  scriptRunByExecutable.sh  stack.yaml  test.sh  testPap.sh  testRight.sh  testWrong.sh  usefulAliases.sh  usefulHs.sh
.stack-work/: stack.sqlite3
1LexerParser/: .lexer.x.swp  .parser.y.swp  Lexer.hi  Lexer.hs  Lexer.x  Makefile  Parser.hs  Parser.y  lexer.x  ok.hs  parser.y  semantics.hs
2Semantic/: .SemTypes.hs.swp  .Semantic.hs.swp  Common.hs  Errors.hs  Helpers.hs  InitSymTab.hs  SemTypes.hs  Semantic.hs  Sems.hs  SemsCodegen.hs  SemsErrs.hs  SemsTypes.hs
2SemanticIR/: IR.hs  Sems.hs  SemsTypes.hs
2SemsIR/: .SemsIRTypes.hs.swp  Helpers.hs  InitSymTab.hs  RemoveDoubles.hs  SemsCodegen.hs  SemsIR.hs  SemsIRTypes.hs
3CTests/: a.out  justACFile.c  justACFile.ll  toIr.sh
3IR/: Codegen.hs  Emit.hs  IR.hs  Ir.hs  Main.hs  ir.hi  ir.hs
4IRCopyPaste/: Codegen.hs
4TestScripts/: testCorrect.sh  testCurrent.sh  testPap.sh  testRight.sh  testWrong.sh  testWrongPap.sh
5ExecutableScripts/: Of.sh  Oi.sh  Oif.sh  f.sh  file.sh  if.sh
ExecutableScripts/: Of.sh  Ofile.sh  Oi.sh  Oif.sh  f.sh  if.sh
IntermediateFiles/: llvmhs.ll
Lexer/: .Lexer.x.swp  .Parser.y.swp  Lexer.hi  Lexer.hs  Lexer.x  Parser  Parser.hi  Parser.hs  Parser.y  Tokens_posn.hi  Tokens_posn.hs  Tokens_posn.x  newtrash  trash
app/: Main.hs
(+205 files in other folders)
