name:                PCLCompiler
version:             0.1.0.0
synopsis:            PCL compiler in haskell
-- description:         
license:             BSD3
license-file:        LICENSE
author:              gnostis
maintainer:          saridakisbitos@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable PCLCompiler
  main-is:             Main.hs
  default-extensions:  LambdaCase,FlexibleInstances,OverloadedStrings
  build-depends:       base >=4.9 && <4.10,llvm-hs-pure,containers,transformers-either,
                       mtl,ghc,array,string-transform,bits,text,llvm-hs,network-byte-order,
                       bytestring,process,ilist,decimal-arithmetic,binary,long-double,
                       floating-bits
  hs-source-dirs:      code,code/LexerParser,code/SemsIR,code/SemsIR/BodySemsIR,code/Helpers
  default-language:    Haskell2010
